# oh-my-codex

./: .gitignore  AGENTS.md  CODE_REVIEW.md  CONNECT.md  LICENSE  README.ko.md  README.md  config.toml  config.yaml  install.sh  pyproject.toml
.codex/skills/analyze/: SKILL.md
.codex/skills/autopilot/: SKILL.md
.codex/skills/build-fix/: SKILL.md
.codex/skills/code-review/: SKILL.md
.codex/skills/configure-notifications/: SKILL.md
.codex/skills/debug/: SKILL.md
.codex/skills/deepinit/: SKILL.md
.codex/skills/deepsearch/: SKILL.md
.codex/skills/doctor/: SKILL.md
.codex/skills/eco/: SKILL.md
.codex/skills/git-master/: SKILL.md
.codex/skills/hud/: SKILL.md
.codex/skills/learner/: SKILL.md
.codex/skills/mcp-setup/: SKILL.md
.codex/skills/note/: SKILL.md
.codex/skills/pipeline/: SKILL.md
.codex/skills/planner/: SKILL.md
.codex/skills/playwright/: SKILL.md
.codex/skills/ralph/: SKILL.md
.codex/skills/ralplan/: SKILL.md
.codex/skills/release/: SKILL.md
.codex/skills/research/: SKILL.md
.codex/skills/reviewer/: SKILL.md
.codex/skills/reviewer/references/: performance-check.md  security-check.md  style-check.md
.codex/skills/security-review/: SKILL.md
.codex/skills/swarm/: SKILL.md
.codex/skills/tdd/: SKILL.md
.codex/skills/team/: SKILL.md
.codex/skills/trace/: SKILL.md
.codex/skills/ultrapilot/: SKILL.md
.codex/skills/ultraqa/: SKILL.md
.codex/skills/ultrawork/: SKILL.md
.github/workflows/: sync-upstream.yml
orchestrator/: __init__.py  analytics.py  cli.py  constants.py  context.py  hooks.py  hud.py  main.py  mcp.py  notifications.py  providers.py  requirements.txt  router.py  session.py  setup.py  skills.py  state.py  team.py  tools.py  updater.py  utils.py  verify.py
orchestrator/agents/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_analytics.py  test_cli.py  test_constants.py  test_context.py  test_hooks.py  test_hud.py  test_notifications.py  test_providers.py  test_router.py  test_session.py  test_skills.py  test_state.py  test_team.py  test_tools.py  test_updater.py  test_verify.py
